# loom-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  env.example  init_db.py  pyproject.toml  run_server.py  start.sh  test_admin_auth.py  test_admin_endpoints.py  test_api.py  test_oss_integration.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  decorators.py  dependencies.py  routes.py
backend/app/core/: __init__.py  config.py  database.py  redis_client.py
backend/app/data/: initial_packages.py
backend/app/models/: __init__.py  agent.py  agent_commission.py  batch_task.py  credit.py  membership_package.py  notification.py  payment.py  phone_verification.py  system_setting.py  task.py  task_log.py  user.py
backend/app/schemas/: common.py
backend/app/services/: __init__.py  ai_client.py  ai_model_route_service.py  aliyun_sms.py  api_limiter.py  auth_service.py  batch_processing_service.py  credit_exchange_service.py  credit_math.py  credit_service.py  file_service.py  lakala_api.py  lakala_counter_service.py  membership_service.py  oss_service.py  payment_service.py  processing_service.py  retention_service.py  service_pricing.py  sms_service.py  task_log_service.py  task_watchdog_service.py
backend/app/utils/: __init__.py  downloads.py  exceptions.py  result_filter.py  result_previews.py  streaming_downloads.py  task_errors.py
backend/examples/: lakala_counter_example.py
backend/migrations/: add_batch_processing.py  add_gqch_services.py  add_is_admin_column.py  add_phone_verification_fields.py  ensure_email_nullable.py  init_membership_packages.py  update_packages.py  update_user_model_for_phone_auth.py
backend/scripts/: migrate_sqlite_to_postgres.py
backend/scripts/migrations/: 20241208_add_agents_invitation_codes.py  20250111_add_notifications.py  20250309_add_agent_owner_hierarchy.py  20250310_add_agent_commissions.py  20250310_add_user_is_test.py  20250313_update_packages_new.py  20250327_agents_partial_unique.py  20250401_add_agent_referral_links.py  (+7 more)
backend/tests/: __init__.py  conftest.py  run_tests.py  test_admin_integration.py  test_admin_migrations.py  test_admin_security.py  test_ai302_grok_client.py  test_ai_model_route_service.py  test_ai_response_errors.py  test_apyi_gemini_client.py  test_batch_processing_service.py  test_combined_pattern.py  test_config.py  test_downloads.py  test_file_service.py  test_gqch_client.py  test_haoee_gemini_client.py  test_health.py  test_jimeng_api.py  test_krapi_gemini_client.py  test_lakala_counter.py  test_oss_service.py  test_processing_download_stream.py  test_processing_service_extract_pattern_adjustment.py  test_prompt_edit_pro_4k.py  test_runninghub_client.py  test_service_pricing.py  test_task_errors.py  test_task_watchdog_service.py  test_tuzi_gemini_client.py  test_tuzi_openai_client.py  test_user_referrals.py  test_vector_result_preview.py  test_vectorizer_fallback.py  utils.py
desktop/: README.md  (+5 more)
(+167 files in other folders)
