[project]
name = "loomai-backend"
version = "0.1.0"
description = "FastAPI backend for the LoomAI platform"
readme = "README.md"
authors = [{ name = "LoomAI" }]
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.4.4"
]

[project.scripts]
loomai-api = "app.main:run"

[tool.uv]
devenv = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
