[project]
name = "loom-ai-backend"
version = "1.0.0"
description = "LoomAI Backend API Server"
authors = [
    {name = "LoomAI Team", email = "tech@loom-ai.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.1.0.post1",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "alibabacloud-credentials>=0.3.4",
    "alibabacloud-dypnsapi20170525>=1.0.4",
    "alibabacloud-tea-openapi>=0.3.10",
    "alibabacloud-tea-util>=0.3.11",
    "pillow>=10.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiofiles>=23.2.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "boto3>=1.34.0",
    "oss2>=2.18.0",
    "stripe>=7.8.0",
    "rsa>=4.9",
    "cryptography>=41.0.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["app"]
